feat(jans-config-api): modify cedarling endpoints in admin-ui plugin to support multi-issuer authz and new policy-store format (#13514)
* feat: modify cedarling endpoints in admin-ui plugin to support multi-issuer authz and new policy-store format

Signed-off-by: duttarnab <arnab.bdutta@gmail.com>

* feat: modify cedarling endpoints in admin-ui plugin to support multi-issuer authz and new policy-store format

Signed-off-by: duttarnab <arnab.bdutta@gmail.com>

* feat: handle case if openid_config_url dosenot match

Signed-off-by: duttarnab <arnab.bdutta@gmail.com>

* 📝 Add docstrings to `jans-config-api-13432`

Docstrings generation was requested by @duttarnab.

The following files were modified:

* `jans-auth-server/model/src/main/java/io/jans/as/model/config/adminui/UIConfiguration.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/filters/AdminUICookieFilter.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/model/adminui/AdminUIPolicyStore.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/model/auth/AppConfigResponse.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/model/auth/GenericResponse.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/rest/adminui/AdminUISecurityResource.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/service/adminui/AdminUISecurityService.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/service/adminui/AdminUIService.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/service/config/AUIConfigurationService.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/utils/CommonUtils.java`
* `jans-config-api/plugins/admin-ui-plugin/src/main/java/io/jans/ca/plugin/adminui/utils/security/PolicyToScopeMapper.